kubernetes/script/elasticsearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: test-elastic
  namespace: elastic-system
spec:
  rules:
    - host: es.test.kibana
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atai-testing-kibana-kb-http
                port:
                  number: 5601
    - host: es.test.server
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atai-testing-eck-cluster-es-http
                port:
                  number: 9200
    - host: es.test.cerebro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cerebro
                port:
                  number: 9000
